--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular-devkit/build-angular": "^19.2.12",
     "@angular-devkit/core": "^19.2.12",
     "@angular-devkit/schematics": "^19.2.12",
+    "@angular/cli": "^19.2.12",
     "@angular/compiler": "^19.2.11",
     "@angular/compiler-cli": "^19.2.11",
     "@nx/angular": "21.0.3",
